WIP: 1.20.1 port in progress (compile fixes ongoing)
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01M8iQo6XpvoDwr6SmnSPjGo